--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,5 +1,13 @@
 <div class='message'>
-  <mat-toolbar>Group1, Me</mat-toolbar>
+  <mat-toolbar>
+    <button mat-raised-button>
+      <a routerLink="/messages">CANCEL
+      </a>
+    </button>
+    <span>
+        Group1, Me
+    </span>
+  </mat-toolbar>
 </div>
 
 <div class='message-main'>
