--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,7 +1,7 @@
 <div class='message'>
   <mat-toolbar>
     <button mat-raised-button>
-      <a routerLink="/messages">CANCEL
+      <a routerLink="/messages">BACK
       </a>
     </button>
     <span>
