--- a/src/app/new-group-step1/new-group-step1.component.css
+++ b/src/app/new-group-step1/new-group-step1.component.css
@@ -27,3 +27,8 @@
 .step1-list{
     /* border-bottom: 1px solid rgba(0,0,0,.42); */
 }
+.step1 button a
+{
+    display: block;
+    width: 100%;
+}
