--- a/src/app/new-group-step2/new-group-step2.component.html
+++ b/src/app/new-group-step2/new-group-step2.component.html
@@ -6,7 +6,7 @@
     </button>
     <button mat-raised-button color="primary">
       <a routerLink="/newGroupStep2" class='color'>
-        CREATE
+        CREAT
       </a>
     </button>
   </div>
