--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -31,7 +31,7 @@
   <mat-form-field class="input">
     <input matInput placeholder="SEND MESSAGE">
   </mat-form-field>
-  <button mat-raised-button color="primary">
+  <button (click)="addMessage()" mat-raised-button color="primary">
     <svg class="icon" width="20px" height="20.00px" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
       <path fill="#ffffff" d="M294.4 908.8 684.8 512 294.4 115.2c-25.6-25.6-25.6-70.4 0-96 25.6-25.6 70.4-25.6 96 0L832 460.8c12.8 12.8 19.2 32 19.2 51.2S844.8 544 832 563.2l-441.6 441.6c-25.6 25.6-70.4 25.6-96 0C262.4 979.2 262.4 934.4 294.4 908.8z"
       />
