--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -31,7 +31,7 @@
                {{group.name}}
             </span>
             <em>
-              haha:666
+              {{group.LatestMessage}}
             </em>
           </div>
         </a>
