--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -46,3 +46,17 @@ line-height: 20px;
 font-size: 14PX;
 color: rgba(0,0,0,.5)
 }
+em{
+    font-style: normal;
+}
+.time{
+    display: inline; 
+    font-size: 10px;
+    /* float: right; */
+    line-height: 28px;
+}
+.group-top{
+    display: flex!important;
+    align-items: baseline !important;
+    justify-content:space-between
+}
