--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -27,8 +27,13 @@
         <a routerLink='/message/{{group.id}}'>
           <img src="{{group.imagepath}}"> 
           <div class='user-chat'>
-            <span>
-               {{group.name}}
+            <span class='group-top'>
+               <span >
+                 {{group.name}}
+               </span>
+               <em class="time">
+                 2018-02-07
+               </em>
             </span>
             <em>
               {{group.LatestMessage}}
