--- a/src/app/new-group-step2/dialog-overview-example-dialog.html
+++ b/src/app/new-group-step2/dialog-overview-example-dialog.html
@@ -1,7 +1,7 @@
 <div class="step2-dialog" >
-    <div >
+    <!-- <div >
         <button mat-button (click)='onNoClick()'>Remove</button>
-    </div>
+    </div> -->
     <div>
         <button mat-button (click)='onNoClick()'>Profile</button>
     </div>
