--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -33,8 +33,8 @@
                 {{group.LatestMessageDate}}
               </em>
             </span>
-            <em>
-              {{group.LatestMessageUser}}: {{group.LatestMessage}}
+            <em *ngIf="group.LatestMessageUser">
+              {{group.LatestMessageUser}} : {{group.LatestMessage}}
             </em>
           </div>
         </a>
