added comment RORY

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -12,6 +12,7 @@
 
 <div class='message-main'>
   <div class='left chat-list'>
+    <!-- RORY added in observable -->
     <div *ngFor="let msg of currentMsgs$|async">
       <img src='{{ msg.imageSender}}'>
       <div>
