--- a/src/app/op30buy/op30buy.component.html
+++ b/src/app/op30buy/op30buy.component.html
@@ -1,3 +1,8 @@
-<p>
-  op30buy works!
-</p>
+<div class='buy'>
+    <div style='width:68%'>
+      <div echarts [options]="options" [loading]="isLoading" class="demo-chart" >
+      </div>
+    </div>
+  <div style='width:28%'>qqqqqqq</div>
+  <i style='clear:both'></i>
+</div>
