--- a/src/app/op30buy/op30buy.component.html
+++ b/src/app/op30buy/op30buy.component.html
@@ -1,8 +1,26 @@
 <div class='buy'>
-    <div style='width:68%'>
-      <div echarts [options]="options" [loading]="isLoading" class="demo-chart" >
-      </div>
+  <div style='width:68%'>
+    <div echarts [options]="options" [loading]="isLoading" class="demo-chart">
     </div>
-  <div style='width:28%'>qqqqqqq</div>
+  </div>
+  <div style='width:28%'>
+    <button mat-button >
+      <mat-icon>insert_drive_file</mat-icon>
+      <div>New Offer</div>
+    </button>
+    <button mat-button >
+      <mat-icon>airport_shuttle</mat-icon>
+      <div>Kiosk</div>
+    </button>
+    <button mat-button >
+     
+      <div>Distribution List</div>
+    </button>
+    <button mat-button >
+      
+      <div>Products</div>
+    </button>
+  </div>
   <i style='clear:both'></i>
+  
 </div>
