--- a/src/app/common/common.component.html
+++ b/src/app/common/common.component.html
@@ -74,8 +74,7 @@
                   
                 </mat-grid-list>
                  <div>
-                     111
-                     
+                    <router-outlet></router-outlet>
                      <!-- <buy></buy> -->
                  </div>
             </div>
