--- a/src/app/op30buy/op30buy.component.css
+++ b/src/app/op30buy/op30buy.component.css
@@ -6,6 +6,10 @@
     margin: 1%;
     padding: 1%;
 }
+.buy{
+    padding:0 10px;
+    padding-top:80px;
+}
 .buy > div:first-child{
     height: 100%;
 }
