--- a/src/app/common/common.component.html
+++ b/src/app/common/common.component.html
@@ -24,10 +24,49 @@
                         </button>
                     </mat-grid-tile>
                 </mat-grid-list>
-                <div class="warp-logo bottom-border">
+                <div class="warp-logo">
                     <img src="../../assets/logo.png" alt="logo">
                 </div>
-                <div class="warp-new bottom-border">
+                <div class="warp-new top-border">
+                    <mat-card role="group">
+                        <mat-card-header>
+                            <mat-card-title>
+                                <b>Company News</b>
+                            </mat-card-title>
+                        </mat-card-header>
+                        <mat-list role="list">
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some Company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some Company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some Company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some Company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                    <a href="#">here are some company news</a>
+                                </mat-list-item>
+                                <mat-list-item role="listitem">
+                                    <a href="#">here are some Company news</a>
+                                </mat-list-item>
+                        </mat-list>
+                    </mat-card>
 
                 </div>
             </div>
@@ -71,14 +110,14 @@
                             <p>Suppliers</p>
                         </button>
                     </mat-grid-tile>
-                  
+
                 </mat-grid-list>
-                 <div>
+                <div>
                     <router-outlet></router-outlet>
-                     <!-- <buy></buy> -->
-                 </div>
+                    <!-- <buy></buy> -->
+                </div>
             </div>
-          
+
         </mat-grid-tile>
     </mat-grid-list>
 </div>
