--- a/src/app/common/common.component.html
+++ b/src/app/common/common.component.html
@@ -7,19 +7,28 @@
 
                     <mat-grid-tile [colspan]="3" rowHeight='100px'>
                         <button mat-button class="warp-left  mat-button">
-                            <mat-icon>shopping_cart</mat-icon>
+                            <span class="mat-button-wrapper">
+                                <div class="mat-icon material-icons" role="img" aria-hidden="true">
+                                    <img src="../../assets/images/top_btn_02.png" alt="">
+                                </div>
+                                <p>Buy</p>
+                            </span>
                             <p>Buy</p>
                         </button>
                     </mat-grid-tile>
                     <mat-grid-tile [colspan]="3">
                         <button mat-button class="warp-left ">
-                            <mat-icon>speaker_notes</mat-icon>
+                            <div class="mat-icon material-icons" role="img" aria-hidden="true">
+                                <img src="../../assets/images/top_btn_06.png" alt="">
+                            </div>
                             <p>Messages</p>
                         </button>
                     </mat-grid-tile>
                     <mat-grid-tile [colspan]="3">
                         <button mat-button class="warp-left ">
-                            <mat-icon>gavel</mat-icon>
+                            <div class="mat-icon material-icons" role="img" aria-hidden="true">
+                                <img src="../../assets/images/top_btn_08.png" alt="">
+                            </div>
                             <p>Sell</p>
                         </button>
                     </mat-grid-tile>
@@ -60,11 +69,11 @@
                                 <a href="#">here are some Company news</a>
                             </mat-list-item>
                             <mat-list-item role="listitem">
-                                    <a href="#">here are some company news</a>
-                                </mat-list-item>
-                                <mat-list-item role="listitem">
-                                    <a href="#">here are some Company news</a>
-                                </mat-list-item>
+                                <a href="#">here are some company news</a>
+                            </mat-list-item>
+                            <mat-list-item role="listitem">
+                                <a href="#">here are some Company news</a>
+                            </mat-list-item>
                         </mat-list>
                     </mat-card>
 
@@ -73,7 +82,7 @@
 
         </mat-grid-tile>
         <mat-grid-tile [colspan]="9">
-            <div class="warp-left">
+            <div class="warp-left warp-right">
                 <mat-grid-list cols="12" class='bottom-border' rowHeight='100px' style='background:white'>
 
                     <mat-grid-tile [colspan]="2" rowHeight='100px'>
