--- a/src/app/common/common.component.css
+++ b/src/app/common/common.component.css
@@ -60,7 +60,7 @@ p{
 .warp-right{
     background: #f3f3f4 !important
 }
-.warp-left img{
+.bottom-border img{
     display: block;
     width:40px;
 }
